--- a/Sol_Demo/Sol_Blazor/Pages/Index.razor
+++ b/Sol_Demo/Sol_Blazor/Pages/Index.razor
@@ -31,6 +31,10 @@
     </div>
 </div>
 
+<div class="blazor-foregroundcolor">
+    Test
+</div>
+
 @code{
 
     private List<int> ListAlert { get; set; }
